--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     Абра кадабра!
     <script src="js.js"></script>
-    <script src="js2.js"></script>
+<!--     <script src="js2.js"></script> -->
 </body>
 </html>
